# covalence

./: .gitignore  .ignore  .vscodeignore  .workmux.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  MVP_DESIGN.md  README.MD  README.md  REFACTOR.md  SKELETONS.md  bunfig.toml  eslint.config.mjs  flake.nix  language-configuration.json  package.json  plan.md
core/: Cargo.toml
core/data/: Cargo.toml
core/data/src/: ctx.rs  fact.rs  lib.rs  store.rs  term.rs  univ.rs
core/kernel/: Cargo.toml
core/kernel/src/: lib.rs
core/src/: lib.rs
core/src/data/: term.rs
core/src/db/: ctx.rs  mod.rs
core/src/fact/: logic.rs  mod.rs
core/src/rule/: derive.rs  ensure.rs  mod.rs  pred.rs  unfold.rs
core/src/store/: mod.rs
core/store/: Cargo.toml
core/store/src/: ctx.rs  lib.rs
covalence/: Cargo.toml
covalence/src/: lib.rs
covalence/src/gat/: mod.rs
covalence/src/kernel/: ctx.rs  mod.rs
covalence/src/sexpr/: mod.rs
crates/covalence-acset/: Cargo.toml  SKELETONS.md
crates/covalence-acset/examples/: lfp.rs
crates/covalence-acset/src/: datalog.rs  lattice.rs  lib.rs
crates/covalence-alethe/: Cargo.toml  SKELETONS.md
crates/covalence-alethe/src/: discharge.rs  error.rs  goal.rs  hol.rs  kernel_bridge.rs  la.rs  lib.rs  tactic.rs
crates/covalence-alethe/tests/: bridge_integration.rs  discharge.rs  hol_bridge.rs
crates/covalence-client/: Cargo.toml
crates/covalence-client/src/: async_client.rs  lib.rs  sync_client.rs  types.rs
crates/covalence-client/tests/: async_content_store.rs
crates/covalence-core/: Cargo.toml  SKELETONS.md
crates/covalence-core/src/: builtins.rs  ctx.rs  error.rs  hol.rs  lib.rs  proofs.rs  subst.rs  term.rs  thm.rs
crates/covalence-core/tests/: abs_rep_unit.rs  audit_connectives.rs  audit_equality.rs  audit_induct.rs  audit_reduce.rs  audit_subst.rs  audit_typedef.rs  define.rs  int_rat.rs  list_stream.rs  observer.rs  option_result.rs  prod_coprod.rs  rules.rs  soundness.rs  tycon_obs.rs  typedef.rs
crates/covalence-dedukti/: Cargo.toml  README.md  SKELETONS.md
crates/covalence-dedukti/src/: entry.rs  error.rs  hol.rs  lex.rs  lib.rs  parse.rs  term.rs
crates/covalence-dedukti/tests/: parse.rs
crates/covalence-egglog/: Cargo.toml
crates/covalence-egglog/src/: bridge.rs  error.rs  external.rs  ingest.rs  kernel_bridge.rs  lib.rs  lower.rs  parse.rs  proof.rs
crates/covalence-egglog/tests/: euf_minimal.rs  euf_oracle.rs  euf_source.rs
crates/covalence-fuse/: Cargo.toml
crates/covalence-fuse/src/: error.rs  inode.rs  lib.rs  tree_fs.rs
crates/covalence-fuse/tests/: mount_smoke.rs
crates/covalence-git/: Cargo.toml
crates/covalence-git/src/: lfs.rs  lib.rs  main.rs
crates/covalence-git/tests/: git_cli_clone.rs
crates/covalence-hol/: Cargo.toml  SKELETONS.md
crates/covalence-hol/examples/: mm_import_bench.rs
crates/covalence-hol/src/: SKELETONS.md  ac.rs  arena.rs  bridge.rs  hash.rs  hol_light_obs.rs  int_axioms.rs  lib.rs  light.rs  nat_axioms.rs  null.rs  peano.rs  project.rs  pure_hol.rs  sexp.rs  traits.rs  types.rs
crates/covalence-hol/tests/: hash.rs  hol_light_obs.rs  regex_matching.rs  sexp_roundtrip.rs
crates/covalence-kernel/: Cargo.toml  SKELETONS.md
crates/covalence-kernel/src/: arena.rs  egraph.rs  engine.rs  eprop.rs  facts.rs  hash.rs  id.rs  kernel.rs  lib.rs  name.rs  primop.rs  prop.rs  reduce.rs  service.rs  subst.rs  term.rs  traits.rs  ty.rs  uf.rs
crates/covalence-kernel/tests/: arena_basic.rs  eprop_basic.rs  hash_basic.rs  prop_basic.rs  prop_tests.rs  sexp_proofs.rs
crates/covalence-kv/: Cargo.toml
crates/covalence-kv/src/: aws.rs  blocking.rs  lib.rs  meta.rs  store.rs  sync.rs
crates/covalence-kv/tests/: s3s_smoke.rs
crates/covalence-llm/: Cargo.toml
crates/covalence-llm/src/: lib.rs
crates/covalence-llm/tests/: smoke.rs
crates/covalence-lsp/: Cargo.toml
crates/covalence-lsp/src/: lib.rs  main.rs
crates/covalence-metamath/: Cargo.toml  README.md  SKELETONS.md
crates/covalence-metamath/src/: database.rs  error.rs  expr.rs  lib.rs  parse.rs  subst.rs  typesetting.rs  verify.rs
crates/covalence-metamath/tests/: hol_mm.rs  mm_file.rs  set_mm.rs  theories.rs
crates/covalence-multiformat/: Cargo.toml  SKELETONS.md
crates/covalence-multiformat/examples/: acset_datalog.rs  acset_query.rs  acset_validate.rs  coln_bridge.rs  kernel_ingest.rs
crates/covalence-multiformat/src/: acset.rs  error.rs  fact.rs  lib.rs  store.rs
crates/covalence-multiformat/tests/: kernel_ingest.rs
crates/covalence-proto/: Cargo.toml
crates/covalence-proto/src/: config.rs  error.rs  git.rs  lib.rs  secrets.rs
crates/covalence-proto/tests/: secrets_env.rs
crates/covalence-pure/: Cargo.toml  SKELETONS.md
crates/covalence-pure-shell/: Cargo.toml
crates/covalence-pure-shell/src/: hash.rs  lib.rs  sexp.rs
crates/covalence-pure-shell/tests/: hash.rs  sexp_roundtrip.rs
crates/covalence-pure-test-guest/: Cargo.toml
crates/covalence-pure-test-guest/src/: lib.rs
crates/covalence-pure/src/: error.rs  ext.rs  lib.rs  subst.rs  term.rs  testing.rs  thm.rs
crates/covalence-pure/tests/: define.rs  erased.rs  observer.rs  pointers.rs  rules.rs  seq.rs  serde.rs  soundness.rs  stage0.rs  stmt.rs  tycon_obs.rs  typedef.rs
crates/covalence-pure/trusted/: Cargo.toml
crates/covalence-python/: Cargo.toml  activate.sh  covalence.pyi  pyproject.toml
crates/covalence-python/src/: backend.rs  component.rs  component_builder.rs  compression.rs  container.rs  container_builder.rs  default.rs  git.rs  graph.rs  hash.rs  kvstore.rs  lib.rs  llm.rs  module.rs  module_builder.rs  pure.rs  server.rs  session.rs  signing.rs  system_builder.rs  table.rs  treestore.rs  wasm_store.rs  worker.rs
crates/covalence-repl/: Cargo.toml
crates/covalence-repl/src/: graph.rs  (+1 more)
crates/covalence-sat/: Cargo.toml
crates/covalence-serve/: Cargo.toml  build.rs
crates/covalence-shell/: Cargo.toml
crates/covalence-smt/: Cargo.toml
crates/covalence-smt-hol/: Cargo.toml
server/: Cargo.toml  package.json
server/src/: main.rs  server.rs  utils.rs
(+2521 files in other folders)
