[workspace]
resolver = "2"
members = [
    "crates/covalence",
    "crates/covalence-*",
    "crates/covalence-pure/trusted",
    "crates/lib/arrow",
    "crates/lib/crypto/sig",
    "crates/lib/fuse",
    "crates/lib/git",
    "crates/lib/hash",
    "crates/lib/json",
    "crates/lib/parquet",
    "crates/lib/parse",
    "crates/lib/proto",
    "crates/lib/rand",
    "crates/lib/sat",
    "crates/lib/sexp",
    "crates/lib/smt",
    "crates/lib/sqlite",
    "crates/lib/types",
    "crates/lib/wasm/build-guest",
    "crates/lib/wasm/core",
    "crates/lib/wasm/spec",
    "crates/lib/wasm/store",
]

[workspace.package]
license = "0BSD OR CC0-1.0"

# egglog support is DISABLED for now (see crates/covalence-egglog/SKELETONS.md).
# The `external-egglog` bridge needs egglog's `proof` module (Justification /
# ProofStore / Proposition / EGraph::new_with_proofs), which the published
# crates.io releases still don't expose — only an upstream git rev does. That
# git dependency also breaks sandboxed environments (e.g. Claude Web) that can't
# fetch it. To re-enable: uncomment the patch below, the egglog dep + feature in
# covalence-egglog/Cargo.toml, and `pub mod external` in its lib.rs.
#
# [patch.crates-io]
# egglog = { git = "https://github.com/egraphs-good/egglog", rev = "a2da717fd2f5eb8e8cd7c68163e5a160da05e637" }
