[workspace]
resolver = "2"
members = [
    "crates/app/*",
    "crates/ffi/*",
    "crates/kernel/base",
    "crates/kernel/base/eval",
    "crates/kernel/base/trusted",
    "crates/kernel/core",
    "crates/kernel/data",
    "crates/kernel/data/numeric",
    "crates/kernel/logic",
    "crates/kernel/hol/*",
    "crates/kernel/sat",
    "crates/kernel/smt",
    "crates/kernel/shell",
    "crates/kernel/web",
    "crates/lang/*",
    "crates/lib/arrow",
    "crates/lib/crypto/*",
    "crates/lib/data/*",
    "crates/lib/fuse",
    "crates/lib/git",
    "crates/lib/graph",
    "crates/lib/hash",
    "crates/lib/json",
    "crates/lib/llm",
    "crates/lib/parquet",
    "crates/lib/parse",
    "crates/lib/proptest",
    "crates/lib/proto",
    "crates/lib/rand",
    "crates/lib/repl-core",
    "crates/lib/sat",
    "crates/lib/sexp",
    "crates/lib/smt",
    "crates/lib/sqlite",
    "crates/lib/types",
    "crates/lib/wasm/*",
    "crates/proof/*",
    "crates/server/*",
    "crates/store/*",
    "crates/vcs/*",
]

[workspace.package]
license = "0BSD OR CC0-1.0"

# egglog support is DISABLED for now (see source-local TODO markers).
# The `external-egglog` bridge needs egglog's `proof` module (Justification /
# ProofStore / Proposition / EGraph::new_with_proofs), which the published
# crates.io releases still don't expose — only an upstream git rev does. That
# git dependency also breaks sandboxed environments (e.g. Claude Web) that can't
# fetch it. To re-enable: uncomment the patch below, the egglog dep + feature in
# crates/proof/egglog/Cargo.toml, and `pub mod external` in its lib.rs.
#
# [patch.crates-io]
# egglog = { git = "https://github.com/egraphs-good/egglog", rev = "a2da717fd2f5eb8e8cd7c68163e5a160da05e637" }
