[package]
name = "covalence"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.4"
indexmap = "2.11.4"
smallvec = "1.15.1"
smol_str = "0.3.2"
typed-generational-arena = "0.2.9"
winnow = "0.7.13"

covalence-kernel = { path = "../core/kernel" }
covalence-store = { path = "../core/store" }
covalence-data   = { path = "../core/data" }