[package]
name = "covalence-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.1"
walkdir = "2"
serde = "1.0.189"
serde_json = "1.0.107"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

covalence_kernel = { path = "../kernel" }