[package]
name = "covalence-alethe"
version = "0.0.0"
edition = "2024"

[dependencies]
covalence-core = { path = "../covalence-core" }
covalence-init = { path = "../covalence-init" }
covalence-sexp = { path = "../lib/sexp" }
covalence-smt = { path = "../lib/smt" }
covalence-types = { path = "../lib/types" }
thiserror = "2"

[features]
# End-to-end tests that shell out to a real cvc5 binary on $PATH (the
# Cvc5Solver lives in covalence-smt behind its own `cvc5` feature).
cvc5 = ["covalence-smt/cvc5"]
