[package]
name = "covalence-fuse"
version = "0.0.0"
edition = "2024"
description = "FUSE filesystem mounts for covalence content stores. Linux-only."

# This crate is Linux-only by design. On other targets it builds as an empty
# stub so workspace `cargo check` keeps working; the public types are gated on
# `cfg(target_os = "linux")` in lib.rs.
[target.'cfg(target_os = "linux")'.dependencies]
covalence-hash = { path = "../covalence-hash" }
covalence-store = { path = "../covalence-store" }
covalence-object = { path = "../covalence-object" }

fuse3 = { version = "0.8", features = ["tokio-runtime", "unprivileged"] }
tokio = { version = "1", features = ["sync", "rt", "fs", "macros", "signal"] }
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"
thiserror = "2"
tracing = "0.1"
libc = "0.2"
