[package]
name = "covalence-git"
version = "0.0.0"
edition = "2024"

[features]
object-store = ["dep:covalence-store", "dep:flate2"]

[dependencies]
covalence-hash = { path = "../covalence-hash" }
covalence-store = { path = "../covalence-store", optional = true, default-features = false }
flate2 = { version = "1", optional = true }
serde_json = "1"
