[package]
name = "covalence-hol"
version = "0.0.0"
edition = "2024"

[features]
default = []

[dependencies]
covalence-core = { path = "../covalence-core" }
covalence-types = { path = "../covalence-types" }
covalence-hash = { path = "../covalence-hash", default-features = false }
covalence-sexp = { path = "../covalence-sexp" }
bytes = "1"
imbl = "5"
indexmap = "2"
smol_str = "0.3"
thiserror = "2"
# The async proof core runs on tokio; `run` blocks on it via a current-thread
# runtime. Native only (the kernel/TCB stays sync) — see `script::block_on`.
tokio = { version = "1", features = ["rt"] }
