[package]
name = "covalence-hol"
version = "0.0.0"
edition = "2024"

# The thin HOL surface: the builder context (`HolLightCtx`), the
# `HolLightKernel`/`HolLightTerms`/`HolLightTypes` traits, and the shared
# `NameId`/`HolError` types — the surface HOL proof *consumers* (the OpenTheory
# importer, `covalence-init`) build against. The bulk semi-trusted API lives in
# `covalence-init`. See `notes/init-hol-split.md`.
#
# Still depends on `covalence-core` for now (the builder constructs
# `covalence_core::Term`); the core-free "peer of covalence-metamath" form is a
# later decoupling.

[features]
default = []

[dependencies]
covalence-core = { path = "../covalence-core" }
thiserror = "2"
