[package]
name = "covalence-lsp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "covalence-lsp"
path = "src/main.rs"

[dependencies]
covalence-ion = { path = "../covalence-ion" }
covalence-store = { path = "../covalence-store" }
lsp-types = "0.97"
lsp-server = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
