[package]
name = "covalence-metamath"
version = "0.0.0"
edition = "2024"

[dependencies]
# The Metamath engine (expression model, substitution, frames, RPN checker,
# MmError) AND the `.mm` reader both live here — this is the lower, HOL-free
# crate. `covalence-hol` depends on it (a HOL-backed `Database` consumer), not
# the other way around.
covalence-sexp = { path = "../covalence-sexp" }
thiserror = "2"
