[package]
name = "covalence-python"
version = "0.0.0"
edition = "2024"

[lib]
name = "covalence"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28"
bytes = "1"
covalence-hash = { path = "../covalence-hash" }
covalence-sexp = { path = "../covalence-sexp" }
covalence-kernel = { path = "../covalence-kernel", features = ["engine", "sqlite"] }
covalence-store = { path = "../covalence-store", features = ["memory", "sqlite"] }
covalence-git = { path = "../covalence-git", features = ["object-store"] }
covalence-object = { path = "../covalence-object" }
covalence-wasm = { path = "../covalence-wasm" }
covalence-repl = { path = "../covalence-repl" }
covalence-serve = { path = "../covalence-serve", default-features = false, features = ["sqlite"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
