[package]
name = "covalence-python"
version = "0.0.0"
edition = "2024"

[lib]
name = "covalence"
crate-type = ["cdylib"]

[features]
default = []
# Expose the covalence-llm chat API (Ollama backend) to Python.
llm = ["dep:covalence-llm"]

[dependencies]
pyo3 = "0.28"
covalence-llm = { path = "../covalence-llm", optional = true, default-features = false, features = ["sync", "openai"] }
bytes = "1"
covalence-hash = { path = "../covalence-hash" }
covalence-sexp = { path = "../covalence-sexp" }
covalence-shell = { path = "../covalence-shell" }
covalence-store = { path = "../covalence-store", features = ["memory", "sqlite"] }
covalence-kv = { path = "../covalence-kv" }
covalence-git = { path = "../covalence-git", features = ["object-store", "clone"] }
covalence-sig = { path = "../covalence-sig" }
covalence-object = { path = "../covalence-object" }
covalence-wasm = { path = "../covalence-wasm" }
covalence-wasm-store = { path = "../covalence-wasm-store" }
covalence-repl = { path = "../covalence-repl" }
covalence-sat = { path = "../covalence-sat" }
covalence-serve = { path = "../covalence-serve", default-features = false }
slotmap = "1"
axum = "0.8"
flate2 = "1"
bzip2 = "0.5"
zstd = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
