[package]
name = "covalence-python"
version = "0.0.0"
edition = "2024"

[lib]
name = "covalence"
crate-type = ["cdylib"]

[features]
default = []
# Expose the covalence-llm chat API (Ollama backend) to Python.
llm = ["dep:covalence-llm"]

[dependencies]
pyo3 = "0.28"
covalence-llm = { path = "../lib/llm", optional = true, default-features = false, features = ["sync", "openai"] }
bytes = "1"
covalence-graph = { path = "../lib/graph" }
covalence-hash = { path = "../lib/hash" }
covalence-sexp = { path = "../lib/sexp" }
covalence-shell = { path = "../kernel/shell" }
covalence-store = { path = "../store/core", features = ["memory", "sqlite"] }
covalence-kv = { path = "../store/kv" }
covalence-git = { path = "../lib/git", features = ["object-store", "clone"] }
covalence-crypto-sig = { path = "../lib/crypto/sig" }
covalence-object = { path = "../vcs/object" }
covalence-wasm = { path = "../lib/wasm/core" }
covalence-wasm-store = { path = "../lib/wasm/store" }
covalence-repl = { path = "../covalence-repl" }
covalence-sat = { path = "../lib/sat" }
covalence-serve = { path = "../covalence-serve", default-features = false }
slotmap = "1"
axum = "0.8"
flate2 = "1"
bzip2 = "0.6"
zstd = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
