[package]
name = "covalence-sat"
version = "0.0.0"
edition = "2024"

[features]
default = ["drat", "lrat"]
drat = []
lrat = []
wasm = ["dep:covalence-wasm"]

[dependencies]
covalence-parse = { path = "../covalence-parse" }
covalence-types = { path = "../covalence-types" }
covalence-wasm = { path = "../covalence-wasm", optional = true }
thiserror = "2"

[dev-dependencies]
covalence-wasm = { path = "../covalence-wasm", features = ["runtime"] }
varisat = "0.2"
