[package]
name = "covalence-serve"
version = "0.0.0"
edition = "2024"

[features]
default = ["static"]
static = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
thiserror = "2"
tracing = "0.1"
covalence-git = { path = "../covalence-git" }
covalence-hash = { path = "../covalence-hash", default-features = false }
covalence-object = { path = "../covalence-object" }
covalence-store = { path = "../covalence-store", features = ["memory"] }
covalence-kernel = { path = "../covalence-kernel" }
covalence-repl = { path = "../covalence-repl" }
covalence-proto = { path = "../covalence-proto", features = ["discovery"] }
ureq = "3"
