[package]
name = "covalence-serve"
version = "0.0.0"
edition = "2024"

[features]
default = ["static"]
static = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
thiserror = "2"
tracing = "0.1"
# Demo: decode `$t` althtmldef HTML (full HTML5 entity table) to Unicode.
html-escape = "0.2"
covalence-git = { path = "../lib/git" }
covalence-hash = { path = "../lib/hash", default-features = false }
covalence-object = { path = "../vcs/object" }
covalence-store = { path = "../store/core", features = ["memory"] }
covalence-shell = { path = "../kernel/shell" }
covalence-repl = { path = "../covalence-repl" }
covalence-init = { path = "../kernel/hol/init" }
covalence-core = { path = "../kernel/hol/core" }
covalence-metamath = { path = "../proof/metamath" }
covalence-proto = { path = "../lib/proto", features = ["discovery"] }
ureq = "3"

[dev-dependencies]
http-body-util = "0.1"
