[package]
name = "covalence-shell"
version = "0.0.0"
edition = "2024"

# Userspace helpers over the kernel. Re-exports the kernel's backend
# surface + the HOL builder API; downstream consumers depend only on this.
[dependencies]
covalence-kernel = { path = "../covalence-kernel" }
covalence-hol = { path = "../covalence-hol" }
